exercice medium en cours

--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Exercice grid medium</title>
@@ -17,11 +17,12 @@
       <h2 class="marque">EcoDesign</h2>
     </header>
     <nav>
-      <a href="#accueil">Accueil</a>
+      <a href="#home">Accueil</a>
       <a href="#services">Services</a>
       <a href="#portfolio">Portfolio</a>
       <a href="#blog">Blog</a>
-      <a href="#a-propos">À propos</a>
+      <a href="#about">À propos</a>
+      <a href="#contact">Contact</a>
     </nav>
     <main>
       <div>
@@ -54,7 +55,7 @@
         <ul>
           <li>Compresser les images et utiliser des formats modernes (WebP)</li>
           <li>Simplifier le design et éviter les éléments superflus</li>
-          <li>Mettre en place la mise en cache côté cliebnt</li>
+          <li>Mettre en place la mise en cache côté client</li>
           <li>Réduire l'utilisation de JavaScript</li>
           <li>Optimiser le CSS en éliminant les règles inutilisées</li>
         </ul>
@@ -93,7 +94,7 @@
         <button>En savoir plus</button>
       </div>
     </main>
-    <aside id="sidebar">
+    <div id="sidebar">
       <div>
         <h3>Articles récents</h3>
         <p>Optimisation des images pour le web</p>
@@ -119,7 +120,7 @@
         <a href="SEO">SEO</a>
         <a href="Accessibilité">Accessibilité</a>
       </div>
-    </aside>
+    </div>
     <footer>
       <section>
         <div>
