--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
@@ -25,43 +25,48 @@
       <a href="#contact">Contact</a>
     </nav>
     <main>
-      <div>
-        <h2>Conception web écologique</h2>
-        <p>Publié le 21 avril 2025</p>
-      </div>
-      <div>
-        <p>
-          Le design web écologique, aussi connu sous le nom d'éco-conception
-          web, est une approche de conception qui vise à réduire l'impact
-          environnemental des sites web et applications en optimisant leur
-          efficacité énergétique.
-        </p>
-      </div>
-      <div>
-        <h3>Principes fondamentaux</h3>
-        <p>L'éco-conception repose sur plusieurs principes :</p>
-        <ul>
-          <li>Optimisation des performances</li>
-          <li>Réduction du poids des pages</li>
-          <li>Minimisation des enquêtes serveur</li>
-          <li>Choix d'hébergeurs éco-responsables</li>
-        </ul>
-      </div>
-      <div>
-        <h3>Bonnes pratiques</h3>
-        <p>
-          Pour créer un site web plus respectueux de l'environnement, on peut :
-        </p>
-        <ul>
-          <li>Compresser les images et utiliser des formats modernes (WebP)</li>
-          <li>Simplifier le design et éviter les éléments superflus</li>
-          <li>Mettre en place la mise en cache côté client</li>
-          <li>Réduire l'utilisation de JavaScript</li>
-          <li>Optimiser le CSS en éliminant les règles inutilisées</li>
-        </ul>
-      </div>
       <section>
         <div>
+          <h2>Conception web écologique</h2>
+          <p>Publié le 21 avril 2025</p>
+        </div>
+        <div>
+          <p>
+            Le design web écologique, aussi connu sous le nom d'éco-conception
+            web, est une approche de conception qui vise à réduire l'impact
+            environnemental des sites web et applications en optimisant leur
+            efficacité énergétique.
+          </p>
+        </div>
+        <div>
+          <h3>Principes fondamentaux</h3>
+          <p>L'éco-conception repose sur plusieurs principes :</p>
+          <ul>
+            <li>Optimisation des performances</li>
+            <li>Réduction du poids des pages</li>
+            <li>Minimisation des enquêtes serveur</li>
+            <li>Choix d'hébergeurs éco-responsables</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Bonnes pratiques</h3>
+          <p>
+            Pour créer un site web plus respectueux de l'environnement, on peut
+            :
+          </p>
+          <ul>
+            <li>
+              Compresser les images et utiliser des formats modernes (WebP)
+            </li>
+            <li>Simplifier le design et éviter les éléments superflus</li>
+            <li>Mettre en place la mise en cache côté client</li>
+            <li>Réduire l'utilisation de JavaScript</li>
+            <li>Optimiser le CSS en éliminant les règles inutilisées</li>
+          </ul>
+        </div>
+      </section>
+      <section id="avantages">
+        <div class="box">
           <h3>Avantages pour les utilisateurs</h3>
           <p>Un site web éco-conçu offre généralement :</p>
           <ul>
@@ -71,7 +76,7 @@
             <li>Une consommation réduite de données</li>
           </ul>
         </div>
-        <div>
+        <div class="box">
           <h3>Avantages pour les entreprises</h3>
           <p>L'éco-conception présente également des bénéfices business :</p>
           <ul>
@@ -150,7 +155,7 @@
         <div>
           <h4>Suivez-nous</h4>
           <img
-            src="https://img.icons8.com/?size=100&id=SQ7yIuRnxkDc&format=png&color=000000"
+            src="https://img.icons8.com/?size=100&id=1bj89U1Ansyb&format=png&color=000000"
             alt="logo-twitter"
           />
           <img
