exercice medium grid / responsive tablette terminé

--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
@@ -95,7 +95,7 @@
           serre.
         </p>
       </div>
-      <div id="bouton">
+      <div id="btn">
         <button>En savoir plus</button>
       </div>
     </main>
