--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
@@ -128,8 +128,8 @@
     </div>
     <footer>
       <section>
-        <div>
-          <div id="footer-marque">
+        <div class="border-bottom-div">
+          <div id="footer-ecodesign">
             <img
               src="https://img.icons8.com/?size=100&id=bT3h5O7LsBxQ&format=png&color=000000"
               alt="logo"
@@ -138,21 +138,21 @@
           </div>
           <p>Pour un web plus respectueux de notre planète</p>
         </div>
-        <div>
+        <div class="border-bottom-div">
           <h4>Liens rapides</h4>
           <a href="accueil">Accueil</a>
           <a href="services">Services</a>
           <a href="blog">Blog</a>
           <a href="contact">Contact</a>
         </div>
-        <div>
+        <div class="border-bottom-div">
           <h4>Contact</h4>
           <p>123 Rue de l'Écologie</p>
           <p>75000 Paris, France</p>
           <p>Email: contact@ecodesign.fr</p>
           <p>Tel: +33 1 23 45 67 89</p>
         </div>
-        <div>
+        <div class="border-bottom-div">
           <h4>Suivez-nous</h4>
           <img
             src="https://img.icons8.com/?size=100&id=1bj89U1Ansyb&format=png&color=000000"
