grid medium validé

--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
@@ -11,18 +11,27 @@
   <body>
     <header>
       <img
+        class="img-logo-header"
         src="https://img.icons8.com/?size=100&id=bT3h5O7LsBxQ&format=png&color=000000"
         alt="logo"
       />
       <h2 class="marque">EcoDesign</h2>
     </header>
     <nav>
-      <a href="#home">Accueil</a>
-      <a href="#services">Services</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#blog">Blog</a>
-      <a href="#about">À propos</a>
-      <a href="#contact">Contact</a>
+      <ul class="menu">
+        <li><a class="link active" href="#home">Accueil</a></li>
+        <li><a class="link" href="#services">Services</a></li>
+        <li>
+          <a class="link" href="#portfolio">Portfolio</a>
+        </li>
+        <li>
+          <a class="link" href="#blog">Blog</a>
+        </li>
+        <li>
+          <a class="link" href="#about">À propos</a>
+        </li>
+        <li><a class="link" href="#contact">Contact</a></li>
+      </ul>
     </nav>
     <main>
       <section>
