--- a/current-training/programming/css/playground/exercices-background/tp-lamborghini/index.html
+++ b/current-training/programming/css/playground/exercices-background/tp-lamborghini/index.html
@@ -28,7 +28,7 @@
                         <li><a href="#dealer">Concessionnaires</a></li>
                      <li><a href="#gallery">Musée</a></li>
                         <li><a href="#store">Store</a></li>
-                 </ul>    
+                    </ul>    
                 </nav>
             </div>
         </section>
@@ -130,7 +130,7 @@
     </main>
     <footer>
         <section class="footer-content">
-        <div class="footer-item1">
+        <div class="footer-content1">
             <p>
                 Lorem Ipsum
             </p>
@@ -145,7 +145,7 @@
                 <li><a href="#">Lorem Ipsum</a></li>
             </ul>
         </div>
-        <div class="footer-item2">
+        <div class="footer-content2">
             <p>
                 Lorem Ipsum
             </p>
@@ -160,7 +160,7 @@
                 <li><a href="#">Lorem Ipsum</a></li>
             </ul>
         </div>
-        <div class="footer-item3">
+        <div class="footer-content3">
             <p>
                 Lorem Ipsum
             </p>
@@ -174,7 +174,7 @@
                 <li><a href="#">Lorem Ipsum</a></li>
             </ul>
         </div>
-        <div class="footer-item4">
+        <div class="footer-content4">
             <p>
                 Lorem Ipsum
             </p>
@@ -188,22 +188,7 @@
                 <li><a href="#">Lorem Ipsum</a></li>
             </ul>
         </div>
-        <div class="footer-item5">
-            <p>
-                Lorem Ipsum
-            </p>
-            <ul>
-                <li><a href="#">Lorem Ipsum</a></li>
-                <li><a href="#">Lorem Ipsum</a></li>
-                <li><a href="#">Lorem Ipsum</a></li>
-                <li><a href="#">Lorem Ipsum</a></li>
-                <li><a href="#">Lorem Ipsum</a></li>
-                <li><a href="#">Lorem Ipsum</a></li>
-                <li><a href="#">Lorem Ipsum</a></li>
-                <li><a href="#">Lorem Ipsum</a></li>
-            </ul>
-        </div>
-        <div class="footer-item6">
+        <div class="footer-content5">
             <p>
                 Lorem Ipsum
             </p>
@@ -218,7 +203,22 @@
                 <li><a href="#">Lorem Ipsum</a></li>
             </ul>
         </div>
-        <div class="footer-item7">
+        <div class="footer-content6">
+            <p>
+                Lorem Ipsum
+            </p>
+            <ul>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+            </ul>
+        </div>
+        <div class="footer-content7">
             <p>
                 Lorem Ipsum
             </p>
