maquette en cours

--- a/current-training/programming/css/playground/exercices-animations/exercice-animation-medium-2/index.html
+++ b/current-training/programming/css/playground/exercices-animations/exercice-animation-medium-2/index.html
@@ -5,17 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>CSS animation medium-2</title>
   </head>
 
   <body>
-    <head>
+    <header>
       <h1>Nos services</h1>
-    </head>
+    </header>
+
     <main>
       <section>
         <div class="card">
-          <div class="image"></div>
+          <div class="image">
+            <img
+              src="https://st4.depositphotos.com/36741118/39552/i/450/depositphotos_395526676-stock-photo-tarot-card-table-white-magic.jpg"
+              alt="image-carte"
+            />
+          </div>
+
           <div class="text">
             <h2>Design Web</h2>
             <p>
@@ -24,44 +33,46 @@
               intuitives.
             </p>
             <button class="button">
-                <p class="btn-text">
-                    En savoir plus
-                </p>
+              <span class="btn-text">En savoir plus</span>
             </button>
           </div>
         </div>
 
         <div class="card">
-          <div class="image"></div>
+          <div class="image">
+            <img
+              src="https://st4.depositphotos.com/36741118/39552/i/450/depositphotos_395526676-stock-photo-tarot-card-table-white-magic.jpg"
+              alt="image-carte"
+            />
+          </div>
           <div class="text">
             <h2>Développement</h2>
             <p>
-              Développement sur mesure utilisant les dernières technologies
-              web pour des applications performantes et évolutives.
+              Développement sur mesure utilisant les dernières technologies web
+              pour des applications performantes et évolutives.
             </p>
             <button>
-                <p class="btn-text">
-                    En savoir plus
-                </p>
+              <span class="btn-text">En savoir plus</span>
             </button>
-            </div>
           </div>
         </div>
 
         <div class="card">
-          <div class="image"></div>
+          <div class="image">
+            <img
+              src="https://st4.depositphotos.com/36741118/39552/i/450/depositphotos_395526676-stock-photo-tarot-card-table-white-magic.jpg"
+              alt="image-carte"
+            />
+          </div>
           <div class="text">
             <h2>Marketing Digital</h2>
             <p>
-              Stratégies marketing innovantes pour accroître votre visiblité
-              en ligne et convertir vos visiteurs en clients.
+              Stratégies marketing innovantes pour accroître votre visiblité en
+              ligne et convertir vos visiteurs en clients.
             </p>
             <button class="button">
-                <p class="btn-text">
-                    En savoir plus
-                </p>
+              <span class="btn-text">En savoir plus</span>
             </button>
-            </div>
           </div>
         </div>
       </section>
