maquette en cours

--- a/current-training/programming/maquette-1/index.html
+++ b/current-training/programming/maquette-1/index.html
@@ -48,7 +48,7 @@
         <button class="header-btn">
           <span class="btn-text">Look more</span>
           <img
-            src="https://img.icons8.com/?size=100&id=Ek7khsXSeZ71&format=png&color=000000"
+            src="https://img.icons8.com/?size=100&id=99982&format=png&color=FFFFFF"
             alt="arrow-icon"
           />
         </button>
@@ -58,13 +58,19 @@
     <main>
       <section class="about-hall">
         <div>
-          <h1>About Go.Hall</h1>
+          <h1>
+            <span>About</span>
+            Go.Hall
+          </h1>
         </div>
         <div class="section-content">
           <div class="content-text">
-            <p>we turn ideas into 
-              <br>works of art.</p>
-            <p>
+            <h4>
+              we turn ideas into
+              <br />
+              works of art.
+            </h4>
+            <p class="text-style">
               Lorem ipsum dolor sit amet consectetur. Posuere leo ultricies
               senectus quam scelerisque consectetur. Sociis neque pellentesque
               egestas porta in ultrices vel tellus at. Sagittis scelerisque
@@ -73,16 +79,18 @@
               Tristique iaculis venenatis magna euismod nulla gravida et lorem
               etiam.
             </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur. Posuere leo ultricies
-              senectus quam scelerisque consectetur. Sociis neque pellentesque
-              egestas porta in ultrices vel tellus at. Sagittis scelerisque
-              felis nunc et. Amet auctor bibendum viverra nunc integer sit.
-              Lobortis urna a id ac volutpat pellentesque ac malesuada.
-              Tristique iaculis venenatis magna euismod nulla gravida et lorem
-              etiam.
-            </p>
-            <p>
+            <div class="mid-text-content">
+              <p class="text-style-gold">
+                Lorem ipsum dolor sit amet consectetur. Posuere leo ultricies
+                senectus quam scelerisque consectetur. Sociis neque pellentesque
+                egestas porta in ultrices vel tellus at. Sagittis scelerisque
+                felis nunc et. Amet auctor bibendum viverra nunc integer sit.
+                Lobortis urna a id ac volutpat pellentesque ac malesuada.
+                Tristique iaculis venenatis magna euismod nulla gravida et lorem
+                etiam.
+              </p>
+            </div>
+            <p class="text-style">
               Lorem ipsum dolor sit amet consectetur. Posuere leo ultricies
               senectus quam scelerisque consectetur. Sociis neque pellentesque
               egestas porta in ultrices vel tellus at. Sagittis scelerisque
@@ -93,19 +101,24 @@
             </p>
           </div>
           <div class="content-image">
-            <img src="Images/london_hall.jpg"
-            alt="london-hall">
+            <img src="Images/london_hall.jpg" alt="london-hall" />
             <span>London Hall</span>
           </div>
         </div>
       </section>
 
       <section class="about-projects">
-        <h1>About Projects</h1>
+        <h1>
+          <span>About</span>
+          Projects
+        </h1>
       </section>
 
       <section class="about-services">
-        <h1>About Services</h1>
+        <h1>
+          <span>About</span>
+          Services
+        </h1>
         <div class="section-content">
           <div class="content-images"></div>
           <div class="content-images"></div>
@@ -117,10 +130,16 @@
     <footer>
       <section class="footer-content">
         <div class="left-content">
-          <h1>Request 
-            <br>A call back</h1>
+          <h1>
+            Request
+            <br />
+            A call back
+          </h1>
         </div>
         <div class="right-content"></div>
+        <div class="footer-btn">
+          <button>Envoyer</button>
+        </div>
       </section>
     </footer>
   </body>
