main maquette en cours

--- a/current-training/programming/maquette-1/index.html
+++ b/current-training/programming/maquette-1/index.html
@@ -31,27 +31,29 @@
       </section>
 
       <section class="header-content">
-        <div class="text-content">
-          <h1>
-            Concert Hall in
-            <br />
-            New York
-          </h1>
-          <p>
-            Concert Hall is architecture of a new generation a building
-            <br />
-            that exists not only in the dimension of space,
-            <br />
-            but also in the dimension of time and communication.
-          </p>
+        <div class="header-section-content">
+          <div class="text-content">
+            <h1>
+              Concert Hall in
+              <br />
+              New York
+            </h1>
+            <p>
+              Concert Hall is architecture of a new generation a building
+              <br />
+              that exists not only in the dimension of space,
+              <br />
+              but also in the dimension of time and communication.
+            </p>
+          </div>
+          <button class="header-btn">
+            <span class="btn-text">Look more</span>
+            <img
+              src="https://img.icons8.com/?size=100&id=99982&format=png&color=FFFFFF"
+              alt="arrow-icon"
+            />
+          </button>
         </div>
-        <button class="header-btn">
-          <span class="btn-text">Look more</span>
-          <img
-            src="https://img.icons8.com/?size=100&id=99982&format=png&color=FFFFFF"
-            alt="arrow-icon"
-          />
-        </button>
       </section>
     </header>
 
@@ -112,6 +114,52 @@
           <span>About</span>
           Projects
         </h1>
+
+        <div class="projects-section-content">
+          <div class="first-flyer">
+            <h2 class="title-style">
+              <span>
+                Concert hall
+                <br />
+                in
+              </span>
+              Paris
+            </h2>
+            <div class="date">
+              <h3>Janvier 2017</h3>
+            </div>
+          </div>
+          <div class="second-flyer">
+            <h2 class="title-style">
+              <span>
+                Concert hall
+                <br />
+                in
+              </span>
+              London
+            </h2>
+            <div class="date">
+              <h3>Mars 2018</h3>
+            </div>
+          </div>
+          <div class="projects-section-text">
+            <img src="Images/logo12.png" alt="logo-12" />
+            <h2 class="title-second-style">
+              Years of successful work
+              <span>
+                <br />
+                in the market
+              </span>
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Posuere
+              <br />
+              leo ultricies senectus quam scelerisque
+              <br />
+              consectetur. Sociis.
+            </p>
+          </div>
+        </div>
       </section>
 
       <section class="about-services">
@@ -127,20 +175,39 @@
       </section>
     </main>
 
-    <footer>
-      <section class="footer-content">
-        <div class="left-content">
-          <h1>
-            Request
-            <br />
-            A call back
-          </h1>
-        </div>
-        <div class="right-content"></div>
-        <div class="footer-btn">
-          <button>Envoyer</button>
-        </div>
-      </section>
-    </footer>
+    <form>
+      <footer>
+        <section class="footer-content">
+          <div class="left-content">
+            <h1>
+              Request
+              <br />
+              A call back
+            </h1>
+          </div>
+          <div class="right-content">
+            <div class="label-content">
+              <label for="name"></label>
+              <input type="text" id="name" placeholder="Name*" />
+            </div>
+            <div class="label-content">
+              <label for="email"></label>
+              <input type="email" id="email" placeholder="Email*" />
+            </div>
+            <div class="label-content">
+              <label for="message"></label>
+              <textarea
+                id="message"
+                name="message"
+                placeholder="Message*"
+              ></textarea>
+            </div>
+            <div class="footer-btn">
+              <button>Envoyer</button>
+            </div>
+          </div>
+        </section>
+      </footer>
+    </form>
   </body>
 </html>
