main section services en cours

--- a/current-training/programming/maquette-1/index.html
+++ b/current-training/programming/maquette-1/index.html
@@ -167,10 +167,46 @@
           <span>About</span>
           Services
         </h1>
-        <div class="section-content">
-          <div class="content-images"></div>
-          <div class="content-images"></div>
-          <div class="content-text-secondary"></div>
+        <div class="services-section-content">
+          <div class="services-left-content">
+            <img src="Images/poly-logo.png" alt="poly-logo" />
+            <span>Development</span>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Posuere leo ultricies
+              senectus quam scelerisque consectetur. Sociis neque pellentesque
+              egestas porta in ultrices vel tellus at. Sagittis scelerisque
+              felis nunc et. Amet auctor bibendum viverra nunc integer sit.
+            </p>
+          </div>
+          <div class="services-middle-content">
+            <img src="Images/3d-logo.png" alt="3d-logo" />
+            <span>Plan works</span>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Posuere leo ultricies
+              senectus quam scelerisque consectetur. Sociis neque pellentesque
+              egestas porta in ultrices vel tellus at.
+            </p>
+          </div>
+          <div class="services-right-content">
+            <div class="services-img">
+              <img src="Images/map.png" alt="map" />
+              <p class="right-content-text">
+                Lorem ipsum dolor sit amet consectetur.
+                <br />
+                Pellentesque egestas porta in ultrices vel
+                <br />
+                tellus at. Sagittis scelerisque felis nunc.
+                <br />
+                Posuere leo ultricies senectus quam
+                <br />
+                scelerisque consectetur. Sociis neque
+                <br />
+                pellentesque egestas porta in ultrices vel
+                <br />
+                tellus at. Sagittis scelerisque felis nunc.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
