--- a/current-training/programming/maquette-1/index.html
+++ b/current-training/programming/maquette-1/index.html
@@ -15,23 +15,25 @@
   <body>
     <header>
       <section class="header-nav">
-        <div class="nav-content">
+        <nav class="nav-menu nav-left">
           <ul>
-            <li><a href="home">Home</a></li>
-            <li><a href="about">About</a></li>
+            <li><a class="link" href="home">Home</a></li>
+            <li><a class="link" href="about">About</a></li>
           </ul>
+        </nav>
 
-          <img src="Images/logo_header.png" alt="the-hall" />
+        <img src="Images/logo_header.png" alt="the-hall" />
 
+        <nav class="nav-menu nav-right">
           <ul>
-            <li><a href="projects">Projects</a></li>
-            <li><a href="contacts">Contacts</a></li>
+            <li><a class="link" href="projects">Projects</a></li>
+            <li><a class="link" href="contacts">Contacts</a></li>
           </ul>
-        </div>
+        </nav>
       </section>
 
       <section class="header-content">
-        <div class="header-section-content">
+        <div class="header-right-content">
           <div class="text-content">
             <h1>
               Concert Hall in
@@ -46,6 +48,7 @@
               but also in the dimension of time and communication.
             </p>
           </div>
+
           <button class="header-btn">
             <span class="btn-text">Look more</span>
             <img
@@ -53,6 +56,9 @@
               alt="arrow-icon"
             />
           </button>
+        </div>
+        <div class="social-media">
+          <img src="Images/social-media.png" alt="social-media" />
         </div>
       </section>
     </header>
@@ -74,37 +80,59 @@
             </h4>
             <p class="text-style">
               Lorem ipsum dolor sit amet consectetur. Posuere leo ultricies
-              senectus quam scelerisque consectetur. Sociis neque pellentesque
-              egestas porta in ultrices vel tellus at. Sagittis scelerisque
-              felis nunc et. Amet auctor bibendum viverra nunc integer sit.
-              Lobortis urna a id ac volutpat pellentesque ac malesuada.
-              Tristique iaculis venenatis magna euismod nulla gravida et lorem
-              etiam.
+              senectus quam scelerisque
+              <br />
+              consectetur. Sociis neque pellentesque egestas porta in ultrices
+              vel tellus at. Sagittis
+              <br />
+              scelerisque felis nunc et. Amet auctor bibendum viverra nunc
+              integer sit. Lobortis urna a id
+              <br />
+              ac volutpat pellentesque ac malesuada. Tristique iaculis venenatis
+              magna euismod nulla
+              <br />
+              gravida et lorem etiam.
             </p>
             <div class="mid-text-content">
               <p class="text-style-gold">
                 Lorem ipsum dolor sit amet consectetur. Posuere leo ultricies
-                senectus quam scelerisque consectetur. Sociis neque pellentesque
-                egestas porta in ultrices vel tellus at. Sagittis scelerisque
-                felis nunc et. Amet auctor bibendum viverra nunc integer sit.
-                Lobortis urna a id ac volutpat pellentesque ac malesuada.
-                Tristique iaculis venenatis magna euismod nulla gravida et lorem
-                etiam.
+                senectus quam
+                <br />
+                scelerisque consectetur. Sociis neque pellentesque egestas porta
+                in ultrices vel
+                <br />
+                tellus at. Sagittis scelerisque felis nunc et. Amet auctor
+                bibendum viverra nunc
+                <br />
+                integer sit. Lobortis urna a id ac volutpat pellentesque ac
+                malesuada. Tristique
+                <br />
+                iaculis venenatis magna euismod nulla gravida et lorem etiam.
               </p>
             </div>
             <p class="text-style">
               Lorem ipsum dolor sit amet consectetur. Posuere leo ultricies
-              senectus quam scelerisque consectetur. Sociis neque pellentesque
-              egestas porta in ultrices vel tellus at. Sagittis scelerisque
-              felis nunc et. Amet auctor bibendum viverra nunc integer sit.
-              Lobortis urna a id ac volutpat pellentesque ac malesuada.
-              Tristique iaculis venenatis magna euismod nulla gravida et lorem
-              etiam.
+              senectus quam scelerisque
+              <br />
+              consectetur. Sociis neque pellentesque egestas porta in ultrices
+              vel tellus at. Sagittis
+              <br />
+              scelerisque felis nunc et. Amet auctor bibendum viverra nunc
+              integer sit. Lobortis urna a id
+              <br />
+              ac volutpat pellentesque ac malesuada. Tristique iaculis venenatis
+              magna euismod nulla
+              <br />
+              gravida et lorem etiam.
             </p>
           </div>
           <div class="content-image">
-            <img src="Images/london_hall.jpg" alt="london-hall" />
-            <span>London Hall</span>
+            <div class="image-relative">
+              <img src="Images/london_hall.jpg" alt="london-hall" />
+              <div class="london">
+                <span>London Hall</span>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -169,23 +197,50 @@
         </h1>
         <div class="services-section-content">
           <div class="services-left-content">
+            <div class="logo-height">
             <img src="Images/poly-logo.png" alt="poly-logo" />
-            <span>Development</span>
+            </div>
+            <span>Developpment</span>
             <p>
-              Lorem ipsum dolor sit amet consectetur. Posuere leo ultricies
-              senectus quam scelerisque consectetur. Sociis neque pellentesque
-              egestas porta in ultrices vel tellus at. Sagittis scelerisque
-              felis nunc et. Amet auctor bibendum viverra nunc integer sit.
+              Lorem ipsum dolor sit amet
+              <br />
+              consectetur. Posuere leo ultricies
+              <br />
+              senectus quam scelerisque
+              <br />
+              consectetur. Sociis neque
+              <br />
+              pellentesque egestas porta in
+              <br />
+              ultrices vel tellus at. Sagittis
+              <br />
+              scelerisque felis nunc et. Amet
+              <br />
+              auctor bibendum viverra nunc
+              <br />
+              integer sit.
             </p>
+            <button>More</button>
           </div>
           <div class="services-middle-content">
+            <div class="logo-height">
             <img src="Images/3d-logo.png" alt="3d-logo" />
+            </div>
             <span>Plan works</span>
             <p>
-              Lorem ipsum dolor sit amet consectetur. Posuere leo ultricies
-              senectus quam scelerisque consectetur. Sociis neque pellentesque
-              egestas porta in ultrices vel tellus at.
+              Lorem ipsum dolor sit amet
+              <br />
+              consectetur. Posuere leo ultricies
+              <br />
+              senectus quam scelerisque
+              <br />
+              consectetur. Sociis neque
+              <br />
+              pellentesque egestas porta in
+              <br />
+              ultrices vel tellus at.
             </p>
+            <button>More</button>
           </div>
           <div class="services-right-content">
             <div class="services-img">
